code/force-app/main/default/objects/omnistudio__VlocityDocuSignTemplate__c/fields/omnistudio__Description__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>