code/force-app/main/default/objects/omnistudio__VlocityDocuSignTemplate__c/fields/omnistudio__DocuSignAccountId__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__DocuSignAccountId__c</fullName>
    <label>DocuSign Account Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>