code/force-app/main/default/objects/omnistudio__VlocityDocuSignTemplate__c/fields/omnistudio__RolesData__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__RolesData__c</fullName>
    <label>Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>