code/force-app/main/default/objects/omnistudio__VlocityDocuSignTemplate__c/fields/omnistudio__RoleTabs__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__RoleTabs__c</fullName>
    <label>Role Tabs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>