code/force-app/main/default/objects/omnistudio__VlocityDocuSignTemplate__c/fields/omnistudio__TemplateIdentifier__c.field-meta.xml
<CustomField>
    <fullName>omnistudio__TemplateIdentifier__c</fullName>
    <label>Template Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>